--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/breeze": "^1.23",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravolt/avatar": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -19,7 +20,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "sven/artisan-view": "^3.6"
     },
     "autoload": {
         "psr-4": {
